--- a/battle.html
+++ b/battle.html
@@ -13,29 +13,29 @@
         <div class="blocAll">
         <div id="vs"></div>
         <div class="blocLeft">
-            <img class="persoLeft" id="persoL" src="./images/" alt="">
+            <img class="persoLeft" id="persoL" loading="lazy" src="./images/" alt="">
         </div>
         
         <div class="blocRight">
-            <img class="persoRight" id="persoR" src="./images/" alt="">
+            <img class="persoRight" id="persoR" loading="lazy" src="./images/" alt="">
         </div>
 
         <div class="grillePerso1">
-            <img class="perso1" src="./images/goku.png" alt="">
-            <img class="perso1" src="./images/gokuKameha.png" alt="">
-            <img class="perso1" src="./images/gokuSSJ.png" alt="">
-            <img class="perso1" src="./images/gokuSSJDbSuper.png" alt="">
-            <img class="perso1" src="./images/ssjGod.png" alt="">
-            <img class="perso1" src="./images/gokuSSJGod.png" alt="">
+            <img class="perso1" loading="lazy" src="./images/goku.png" alt="">
+            <img class="perso1" loading="lazy" src="./images/gokuKameha.png" alt="">
+            <img class="perso1" loading="lazy" src="./images/gokuSSJ.png" alt="">
+            <img class="perso1" loading="lazy" src="./images/gokuSSJDbSuper.png" alt="">
+            <img class="perso1" loading="lazy" src="./images/ssjGod.png" alt="">
+            <img class="perso1" loading="lazy" src="./images/gokuSSJGod.png" alt="">
         </div>
 
         <div class="grillePerso2">
-            <img class="perso2" src="./images/vegeta.png" alt="">
-            <img class="perso2" src="./images/freezer.png" alt="">
-            <img class="perso2" src="./images/cell.png" alt="">
-            <img class="perso2" src="./images/broly.png" alt="">
-            <img class="perso2" src="./images/jiren.png" alt="">
-            <img class="perso2" src="./images/picc.png" alt="">
+            <img class="perso2" loading="lazy" src="./images/vegeta.png" alt="">
+            <img class="perso2" loading="lazy" src="./images/freezer.png" alt="">
+            <img class="perso2" loading="lazy" src="./images/cell.png" alt="">
+            <img class="perso2" loading="lazy" src="./images/broly.png" alt="">
+            <img class="perso2" loading="lazy" src="./images/jiren.png" alt="">
+            <img class="perso2" loading="lazy" src="./images/picc.png" alt="">
         </div>
 
     </div>
