--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
 
-    <img class="logo" src="./images/Dragon_Ball_Z_Logo.png" alt="">
+    <img class="logo" loading="lazy" src="./images/Dragon_Ball_Z_Logo.png" alt="">
     <a href="battle.html" class="myButton">Select your character</a>
 
     <div class="boxGoku">
-        <img class="goku" src="./images/goku.png" alt="">
+        <img class="goku" loading="lazy" src="./images/goku.png" alt="">
     </div>        
     
     <div class="controls">
